[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/UI/Heartbeat.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/UI/Hitpoint.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/UI/CandleCount.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/UI/UIController.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/ItemTracker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Fonts/Averia Libre/AveriaLibre-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/UI/NMTracker.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/Clock.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/UI/Fade.tscn" type="PackedScene" id=9]
[ext_resource path="res://Themes/MainTheme.tres" type="Theme" id=10]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 6 )

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BeatHolder" parent="." instance=ExtResource( 1 )]

[node name="HP" parent="." instance=ExtResource( 2 )]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 155.0
margin_top = -96.0
margin_right = 241.0
margin_bottom = -20.0

[node name="GameOver" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.635
margin_top = -209.896
margin_right = 136.365
margin_bottom = -136.896
custom_fonts/font = SubResource( 1 )
text = "Game Over"

[node name="Description" type="Label" parent="GameOver"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = 23.5
margin_right = 206.5
margin_bottom = 52.5
custom_fonts/font = SubResource( 2 )
text = "... We're not sure why the game ended"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Win" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -156.635
margin_top = -209.896
margin_right = 136.365
margin_bottom = -136.896
custom_fonts/font = SubResource( 1 )
text = "You Won!"

[node name="Description" type="Label" parent="Win"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -206.5
margin_top = 23.5
margin_right = 206.5
margin_bottom = 52.5
custom_fonts/font = SubResource( 2 )
text = "You kept the nightmares at bay!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemTracker" parent="." instance=ExtResource( 5 )]
margin_left = -291.605
margin_top = -166.444
margin_right = -13.6046
margin_bottom = -12.4437

[node name="NMTracker" parent="." instance=ExtResource( 7 )]
margin_right = 173.0
margin_bottom = 51.0

[node name="CandleCount" parent="." instance=ExtResource( 3 )]

[node name="Clock" parent="." instance=ExtResource( 8 )]

[node name="ButtonHolder" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -205.5
margin_top = -45.5
margin_right = 205.5
margin_bottom = 45.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play again" type="Button" parent="ButtonHolder"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -10.0
margin_right = 75.0
margin_bottom = 10.0
theme = ExtResource( 10 )
text = "Play again"

[node name="Quit" type="Button" parent="ButtonHolder"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -44.0
margin_top = -13.0
margin_bottom = 13.0
theme = ExtResource( 10 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fade" parent="." instance=ExtResource( 9 )]
[connection signal="GameOver" from="." to="Clock" method="StopTimer"]
[connection signal="GameOver" from="." to="BeatHolder" method="StopEverything"]
[connection signal="GameOver" from="HP" to="." method="GetGameOver"]
[connection signal="GameOver" from="NMTracker" to="." method="GetGameOver"]
[connection signal="Win" from="Clock" to="." method="GetWin"]
